iac/k8s/base/gateway-bridge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-bridge
  namespace: lorawan
  labels:
    app: gateway-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-bridge
  template:
    metadata:
      labels:
        app: gateway-bridge
    spec:
      containers:
      - name: gateway-bridge
        image: chirpstack/chirpstack-gateway-bridge:4.0.10
        ports:
        - containerPort: 1700
          name: semtech-udp
          protocol: UDP
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
