iac/k8s/base/chirpstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chirpstack
  namespace: lorawan
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: grpc
    port: 8090
    targetPort: 8090
  selector:
    app: chirpstack
