iac/k8s/base/gateway-bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-bridge
  namespace: lorawan
spec:
  type: NodePort
  ports:
  - name: semtech-udp
    port: 1700
    targetPort: 1700
    nodePort: 31700
    protocol: UDP
  selector:
    app: gateway-bridge
