iac/k8s/base/chirpstack-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chirpstack
  namespace: lorawan
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`eu1.lorawan.brad.technology`) && Headers(`Upgrade`, `websocket`)
    services:
    - name: gateway-bridge
      port: 3001
  - kind: Rule
    match: Host(`eu1.lorawan.brad.technology`)
    services:
    - name: chirpstack
      port: 8080
  tls:
    certResolver: myresolver
